tests/miniJava/neg/006910_mutation.MiniJava
0 java { public static void Main ( String [ ] java ) { { } } }
